5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2505.log
== TEST (2019-05-12 15:35:28) 
-- CODE:
from math import*	
an=eval(input("angulo: "))
k=int(input("numero de termos: "))
soma=0
i=0
while(i<k):
	soma=soma+((-i)*an**(2*i+1)/factorial(2*i+1))
	i=i+1
	
print(round(soma,10))

-- OUTPUT:
-0.8200363771
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 15:37:56) 
-- CODE:
from math import*	
an=eval(input("angulo: "))
k=int(input("numero de termos: "))
soma=1
i=1
while(i<k):
	soma=soma+((-i)*an**(2*i+1)/factorial(2*i+1))
	i=i+1
	
print(round(soma,10))

-- OUTPUT:
0.1799636229
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 15:38:42) 
-- CODE:
from math import*	
an=eval(input("angulo: "))
k=int(input("numero de termos: "))
soma=1
i=1
while(i<k):
	soma=soma+(-i)*an**(2*i+1)/factorial(2*i+1)
	i=i+1
	
print(round(soma,10))

-- OUTPUT:
0.1799636229
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 15:44:00) 
-- CODE:
from math import*	
an=eval(input("angulo: "))
k=int(input("numero de termos: "))
soma=1
i=1
while(i<k):
	soma=soma+(-1)**i*an**(2*i+1)/factorial(2*i+1)
	i=i+1
	
print(round(soma,10))

-- OUTPUT:
0.4292072158
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 15:44:31) 
-- CODE:
from math import*	
an=eval(input("angulo: "))
k=int(input("numero de termos: "))
soma=0
i=0
while(i<k):
	soma=soma+(-1)**i*an**(2*i+1)/factorial(2*i+1)
	i=i+1
	
print(round(soma,10))

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 15:44:47) 
-- CODE:
from math import*	
an=eval(input("angulo: "))
k=int(input("numero de termos: "))
soma=0
i=0
while(i<k):
	soma=soma+(-1)**i*an**(2*i+1)/factorial(2*i+1)
	i=i+1
	
print(round(soma,10))

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 15:44:52) 
-- CODE:
from math import*	
an=eval(input("angulo: "))
k=int(input("numero de termos: "))
soma=0
i=0
while(i<k):
	soma=soma+(-1)**i*an**(2*i+1)/factorial(2*i+1)
	i=i+1
	
print(round(soma,10))

-- EXECUTION TIME:
0.180674
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:29:57) 
-- CODE:
from math import*
an=eval(input("angulo: "))
k=int(input("numero: "))
i=0
soma=0
while(i<k):
	soma=soma+(-1)**i*an**(2*i+1)/factorial(2*i+1)
	i=i+1
print(round(soma,10)


-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:30:26) 
-- CODE:
from math import*
an=eval(input("angulo: "))
k=int(input("numero: "))
i=0
soma=0
while(i<k):
	soma=soma+(-1)**i*an**(2*i+1)/factorial(2*i+1)
	i=i+1
print(round(soma,10))


-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:30:44) 
-- CODE:
from math import*
an=eval(input("angulo: "))
k=int(input("numero: "))
i=0
soma=0
while(i<k):
	soma=soma+(-1)**i*an**(2*i+1)/factorial(2*i+1)
	i=i+1
print(round(soma,10))


-- EXECUTION TIME:
0.168025
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
